add the top detail nav and main nav

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,12 +1,15 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: brder-box;
+	list-style: none;
+	font-family: poppins;
+}
 
-	*{
-		margin:0;
-		padding:0;
-		box-sizing: brder-box;
-	}
-	
-	$primary-color:#101E4B;
-	$secondary-text-color:#0E7BCB;
-	$complementary-color:#F5DD02;
-	$cta-color: #E4001B;
-	$background-white: #FEFEFE;
+$primary-color:#101E4B;
+$secondary-text-color:#0E7BCB;
+$complementary-color:#F5DD02;
+$cta-color: #E4001B;
+$background-white: #FEFEFE;
+
+$max-width: 70em;
