--- a/static/global.css
+++ b/static/global.css
@@ -4,9 +4,15 @@ body {
 	font-size: 14px;
 	line-height: 1.5;
 	color: #333;
+	background: blue;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	margin: 0 0 0.5em 0;
 	font-weight: 400;
 	line-height: 1.2;
