--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,10 +1,10 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: brder-box;
-	list-style: none;
-	font-family: poppins;
-}
+// * {
+// 	margin: 0;
+// 	padding: 0;
+// 	box-sizing: brder-box;
+// 	list-style: none;
+// 	font-family: poppins;
+// }
 
 $primary-color:#101E4B;
 $secondary-text-color:#0E7BCB;
@@ -12,4 +12,4 @@ $complementary-color:#F5DD02;
 $cta-color: #E4001B;
 $background-white: #FEFEFE;
 
-$max-width: 70em;
+$max-width: 100em;
