uncommented the commented code

--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,10 +1,8 @@
-// * {
-// 	margin: 0;
-// 	padding: 0;
-// 	box-sizing: brder-box;
-// 	list-style: none;
-// 	font-family: poppins;
-// }
+* {
+    box-sizing: brder-box;
+    list-style: none;
+    font-family: poppins;
+}
 
 $primary-color:#101E4B;
 $secondary-text-color:#0E7BCB;
